# mcp-brain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: audit.yml  docker.yml
config/: auth.yaml.example
docs/: Caddyfile.example  auth.md  chatgpt-setup.md  claude-setup.md  deployment.md  gemini-setup.md  upgrade.md  write-policy.example.md
knowledge/: meta.yaml.example
mcp_brain/: admin.py  auth.py  graph.py  i18n.py  integration_store.py  keystore.py  logging_middleware.py  oauth.py  rate_limit.py  search.py  server.py  usage.py  worker.py
mcp_brain/isolation/: __init__.py  bwrap.py  cgroups.py  entrypoint.py  manager.py
mcp_brain/tools/: _perms.py  apikeys.py  briefing.py  gcal.py  graph.py  inbox.py  knowledge.py  maintain.py  meta.py  nextcloud.py  oauth_connections.py  search.py  secrets_schema.py  todoist.py  trello.py  wake.py
scripts/: google-auth.py  install.sh  proxmox-install.sh  update.sh
tests/: conftest.py  test_admin_endpoints.py  test_auth.py  test_briefing.py  test_graph.py  test_inbox.py  test_isolation.py  test_knowledge.py  test_maintain.py  test_path_validation.py  test_rate_limit.py  test_schema_version.py  test_search.py  test_worker.py
