[project]
name = "mcp-brain"
version = "0.1.0"
description = "Personal MCP server for persistent AI memory and integrations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
scrapers = [
    "playwright>=1.40.0",
    "httpx>=0.27.0",
]
integrations = [
    "todoist-api-python>=2.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
mcp-brain = "mcp_brain.server:main"
