[project]
name = "mcp-brain"
version = "0.1.0"
description = "Personal MCP server for persistent AI memory and integrations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "starlette>=0.40",
    "uvicorn[standard]>=0.30.0",
    "defusedxml>=0.7.1",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
scrapers = [
    "playwright>=1.40.0",
    "httpx>=0.27.0",
]
integrations = [
    "todoist-api-python>=2.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
]

[project.scripts]
mcp-brain = "mcp_brain.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_brain*"]
exclude = ["knowledge*", "docs*"]
